# mWrapper

./: .gitignore  LICENSE  README.md  ThirdPartyNotices.md  mWrapper_spec.md  mwrapper_launcher.py  pyproject.toml
.github/workflows/: release.yml
mwrapper/: __init__.py  app.py  constants.py  main.py
mwrapper/core/: __init__.py  config.py  jobs.py  paths.py
mwrapper/services/: __init__.py  cuda_environment.py  ffmpeg.py  hardware.py  log_formatter.py  mmaudio_demo_patch.py  mmaudio_dependencies.py  mmaudio_downloader.py  mmaudio_runner.py  model_assets.py  output_manager.py  package_installer.py  process_log_guard.py  python_env.py  setup_chime.py  setup_storage.py  subprocess_utils.py  updater.py  video_service.py
mwrapper/ui/: main_window.py  preview_player.py
mwrapper/ui/widgets/: drop_area.py
mwrapper/workers/: auto_setup_worker.py  command_worker.py  generate_worker.py  mmaudio_download_worker.py  mmaudio_env_setup_worker.py  update_worker.py
scripts/: build_exe.ps1  clean_temp.py  install.ps1  setup_dev.ps1
tests/: test_config.py  test_cuda_environment.py  test_duration.py  test_hardware.py  test_icon_asset.py  test_log_formatter.py  test_mmaudio_demo_patch.py  test_mmaudio_dependencies.py  test_mmaudio_downloader.py  test_mmaudio_env_setup_worker.py  test_mmaudio_runner.py  test_model_assets.py  test_output_naming.py  test_package_installer.py  test_preview_player.py  test_process_log_guard.py  test_python_env.py  test_setup_chime.py  test_setup_storage.py  test_subprocess_utils.py  test_updater.py  test_video_service.py
