[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mwrapper"
version = "0.1.3"
description = "A PySide6 GUI wrapper for MMAudio-based video-to-audio generation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "mWrapper contributors" }]
dependencies = [
  "PySide6>=6.7",
  "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/dikmri/mWrapper"
Repository = "https://github.com/dikmri/mWrapper"
Issues = "https://github.com/dikmri/mWrapper/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "build>=1.2",
  "pyinstaller>=6.11",
]
setup = [
  "huggingface_hub>=0.23",
  "python-dotenv>=1.0",
]

[project.scripts]
mwrapper = "mwrapper.main:main"

[tool.setuptools.packages.find]
include = ["mwrapper*"]

[tool.setuptools.package-data]
mwrapper = ["resources/icons/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
